hphp/hack/test/typecheck/xhp_attr_24.php
<?hh

class :foo extends SomePHPClass {
  attribute int bar;
}

function main(): void {
  $x = <foo bar="abc" />; // type error
}
